# lanchat

./: .env.example  .gitignore  README.md  config.prod.yaml  config.test.yaml  environment.yml
langchain-chat/: README.md  config.dev.yaml  config.yaml  pyproject.toml  requirements.txt
langchain-chat/config/: logging.yaml  presets.yaml
langchain-chat/data/dev/sqlite/: app.db
langchain-chat/data/mysql-sim/: langchain_chat.db
langchain-chat/docs/: architecture.md
langchain-chat/scripts/: smoke.py
langchain-chat/src/: __init__.py  main.py
langchain-chat/src/core/: preset_manager.py  user_manager.py
langchain-chat/src/storage/: base.py  factory.py  file_backend.py  mysql_backend.py
langchain-chat/testdata/debug/: app.db
langchain-chat/testdata/session-manager-1a6fa597aea74a9a8dbfaae586023395/: app.db
langchain-chat/testdata/session-manager-339db0511ace478ab3a209fc56ff6a60/: app.db
langchain-chat/testdata/session-manager-98259747d6ea481a893fc6c86b42a077/: app.db
langchain-chat/testdata/session-manager-f8d0b8fa54284b40b1d4f06c394f22a2/: app.db
langchain-chat/testdata/storage-2e311ee50f8a47acb7038d98cb187911/: app.db
langchain-chat/testdata/storage-4f41a9d7d4c946628f34c2373f06434e/: app.db
langchain-chat/testdata/storage-7f62c55cee4d474fb2bad91d68237725/: app.db
langchain-chat/testdata/storage-ec315db984754115b94f61e5daf9a9cc/: app.db
langchain-chat/testdata/user-manager-271b223a6d4c45aea2d341cf00e1462a/: app.db
langchain-chat/tests/: test_config_manager.py  test_session_manager.py  test_storage.py  test_user_manager.py
scripts/: init_db.py
(+25 files in other folders)
